[package]
name = "osm-viewver"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.94"
bincode = "1.3.3"
geo-svg = "0.7.0"
geo-types = "0.7.14"
indicatif = { version = "0.17.9", features = ["rayon"] }
log = "0.4.22"
osmio = "0.14.0"
pretty_env_logger = "0.5.0"
rayon = "1.10.0"
serde = { version = "1.0.216", features = ["derive"] }
smallvec = { version = "1.13.2", features = ["serde"] }
smol_str = { version = "0.3.2", features = ["serde"] }
