[package]
name = "osm-viewver"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.94"
axum = "0.7.9"
bincode = "1.3.3"
geo-svg = "0.7.0"
geo-types = "0.7.14"
indicatif = { version = "0.17.9", features = ["rayon"] }
osmio = "0.14.0"
rayon = "1.10.0"
serde = { version = "1.0.216", features = ["derive"] }
smallvec = { version = "1.13.2", features = ["serde"] }
smol_str = { version = "0.3.2", features = ["serde"] }
tokio = { version = "1.42.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
