[package]
name = "osm-viewver"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["macros", "ws"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
bincode = "1.3"
geo = { version = "0.29" }
indicatif = { version = "0.17", features = ["rayon"] }
osmio = "0.14"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.135"
smallvec = { version = "1.13", features = ["serde"] }
smol_str = { version = "0.3", features = ["serde"] }
tokio = { version = "1.43", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
